--- a/01-color-flipper/styles.css
+++ b/01-color-flipper/styles.css
@@ -1,6 +1,6 @@
 
 @import url("https://fonts.googleapis.com/css?family=Open+Sans|Roboto:400,700&display=swap");
-@import url('/global.css');
+@import url("/global.css");
 
 nav {
   background: var(--clr-white);
